--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
              <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                 <label for="isenha" >Senha</label>
                 <input type="submit" value="Entrar">]
-                <a href="esqueci.html">Esqueci a Senha <span class="material-symbols-outlined">mail</span></a>
+                <a href="esqueci.html" class="botao">Esqueci a Senha <span class="material-symbols-outlined">mail</span></a>
            </div>
           </form>
         </div>
