--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
               </span>
               
              <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
-                <label for="isenha" >Senha</label>
-                <input type="submit" value="Entrar">]
+                
+                <input type="submit" value="Entrar" class="entrar">
                 <a href="esqueci.html" class="botao">Esqueci a Senha <span class="material-symbols-outlined">mail</span></a>
            </div>
           </form>
